Implementing gulp to build

--- a/src/templates/opWegEersel.html
+++ b/src/templates/opWegEersel.html
@@ -13,7 +13,7 @@
 
       <label class="item item-input" id="opWegEersel-input7">
         <span class="input-label"></span>
-        <input placeholder="Ik ga naar..." type="text">
+        <input id="re_search" placeholder="Ik ga naar..." type="text">
       </label>
 
       <div id="opWegEersel-button-bar4" class="button-bar">
