--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,15 +13,13 @@ body {
 }
 
 @media only screen and (max-width: 700px) {
-	body {
-		/*width: 500px;*/
-	}
 
 	.page {
 		width: 100%;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
+
 }
 
-.mithril-map { height: 100%; };
+.mithril-map { height: 400px; };
